; ModuleID = '/home/carl/AnghaBench/i3/src/extr_con.c_con_activate_unblock.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_con.c_con_activate_unblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@focused = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @con_activate_unblock(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @con_get_workspace(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** @focused, align 8
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @con_get_fullscreen_covering_ws(i32* %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %1
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = icmp ne i32* %14, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %13
  %18 = load i32*, i32** %2, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @con_has_parent(i32* %18, i32* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @con_disable_fullscreen(i32* %23)
  br label %25

25:                                               ; preds = %22, %17, %13, %1
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @con_activate(i32* %26)
  %28 = load i32*, i32** %3, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i32* @con_get_workspace(i32* %29)
  %31 = icmp ne i32* %28, %30
  br i1 %31, label %32, label %39

32:                                               ; preds = %25
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @con_activate(i32* %33)
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @workspace_show(i32* %35)
  %37 = load i32*, i32** %2, align 8
  %38 = call i32 @con_activate(i32* %37)
  br label %39

39:                                               ; preds = %32, %25
  ret void
}

declare dso_local i32* @con_get_workspace(i32*) #1

declare dso_local i32* @con_get_fullscreen_covering_ws(i32*) #1

declare dso_local i32 @con_has_parent(i32*, i32*) #1

declare dso_local i32 @con_disable_fullscreen(i32*) #1

declare dso_local i32 @con_activate(i32*) #1

declare dso_local i32 @workspace_show(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
